--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,17 @@
 server:
-  port: 8083
+  port: 9083
 spring:
   data:
     mongodb:
       uri: mongodb://localhost:27017
       database: microservices
+  application:
+    name: RATING-SERVICE
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
